# masonite_admin

./: .coverage  .env.testing  .gitignore  Pipfile  README.md  admin_table_schema.md  pyproject.toml  setup.py
admin/: MANIFEST.in  setup.py
admin/admin/: providers.py
admin/admin.egg-info/: PKG-INFO  SOURCES.txt
admin/admin/commands/: CreateSuperUserCommand.py  InstallCommand.py
admin/admin/migrations/: 2019_05_12_0000_create_admin_users_table.py  2019_05_12_0001_create_login_tokens_table.py
admin/admin/templates/admin/: package.json
admin/admin/templates/vue/: package.json
admin/admin/web/: ApplicationService.py  LoginToken.py  admin_controller.py  admin_resources.py  admin_routes.py  field_list.md  login_controller.py
admin/admin/web/AdminUsers/: AdminUsersEntity.py  (+2 more)
app/: AdminUser.py  User.py
app/http/middleware/: AdminMiddleware.py  AdministratorMiddleware.py  CsrfMiddleware.py
app/models/: AdminUser.py  LoginToken.py  Post.py  Sample.py
config/: admin.py  auth.py  middleware.py  providers.py
databases/: db.sqlite3
databases/migrations/: 2019_05_16_153338_create_samples_table.py
databases/seeds/: admin_users_table_seeder.py  posts_table_seeder.py  user_table_seeder.py
project/admin/: admin_controller.py  admin_package_routes.py  admin_resources.py  admin_routes.py  resources.py  web.py
project/admin/admin/: providers.py
project/admin/templates/: index.html
project/admin_test/: setup.py
project/admin_test/admin/: integration.py
project/app/commands/: AdminCommand.py
project/app/models/: AdminUser.py  LoginToken.py  Post.py  Sample.py
project/app/providers/: AdminProvider.py
project/config/: admin.py  middleware.py  providers.py
project/databases/: db.sqlite3
project/databases/migrations/: 2019_03_27_163622_create_posts_table.py  2019_05_16_153338_create_samples_table.py
project/databases/seeds/: admin_users_table_seeder.py  database_seeder.py  posts_table_seeder.py  user_table_seeder.py
project/routes/: web.py
routes/: web.py
tests/test_admin/: info.py  login.py  logout.py  resource.py  resourceappservice.py  root.py  schema.py
(+148 files in other folders)
