[tool.poetry]
name = "masonite_admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
masonite-cli = "=2.2.0"
asn1crypto = "=0.24.0"
attrs = "=19.1.0"
backpack = "=0.1"
bcrypt = "=3.1.7"
blinker = "=1.4"
CacheControl = "=0.12.5"
cachy = "=0.2.0"
certifi = "=2019.6.16"
cffi = "=1.12.3"
chardet = "=3.0.4"
cleo = "=0.6.8"
cryptography = "=2.3.1"
Faker = "=0.8.18"
html5lib = "=1.0.1"
hupper = "=1.8.1"
idna = "=2.8"
inflection = "=0.3.1"
Jinja2 = "=2.10.1"
jsonschema = "=3.0.1"
lazy-object-proxy = "=1.4.1"
lockfile = "=0.12.2"
MarkupSafe = "=1.1.1"
masonite = "=2.2.6"
masonite-dot = "=0.0.4"
masonite-events = "=1.0.1"
masonite-scheduler = "=1.0.2"
masonite-validation = "=2.2.7"
msgpack = "=0.6.1"
orator = "=0.9.8"
passlib = "=1.7.1"
pastel = "=0.1.0"
pendulum = "=1.5.1"
pkginfo = "=1.5.0.1"
poetry = "=0.12.17"
psutil = "=5.4.8"
pyaml = "=16.12.2"
pycparser = "=2.19"
Pygments = "=2.4.2"
pylev = "=1.3.0"
pyparsing = "=2.4.0"
pyrsistent = "=0.14.11"
python-dateutil = "=2.8.0"
python-dotenv = "=0.8.2"
pytz = "=2019.1"
pytzdata = "=2019.2"
PyYAML = "=3.13"
requests = "=2.22.0"
requests-file = "=1.4.3"
requests-toolbelt = "=0.8.0"
shellingham = "=1.3.1"
simplejson = "=3.16.0"
six = "=1.12.0"
tabulate = "=0.8.3"
text-unidecode = "=1.2"
tldextract = "=2.2.1"
tomlkit = "=0.5.5"
tzlocal = "=1.5.1"
urllib3 = "=1.25.3"
webencodings = "=0.5.1"
whitenoise = "=4.1.2"
wrapt = "=1.11.2"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
autopep8 = "^1.4"
flake8 = "^3.7"
pyformat = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
