[tool.poetry]
name = "masonite_admin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
masonite-cli = "^2.2"
masonite = "^2.2"
PyMySQL = "^0.9.3"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
